--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -54,10 +54,15 @@
 
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
-
-
-
-
+            <ProgressBar
+                android:id="@+id/pBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@+id/recycler"
+                app:layout_constraintEnd_toEndOf="@+id/recycler"
+                app:layout_constraintStart_toStartOf="@+id/recycler"
+                app:layout_constraintTop_toTopOf="@+id/recycler" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
